; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_exynos_gfx.c_exynos_create_mapped_buffer.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_exynos_gfx.c_exynos_create_mapped_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.exynos_bo = type { i32 }
%struct.exynos_device = type { i32 }

@.str = private unnamed_addr constant [53 x i8] c"[video_exynos]: failed to create temp buffer object\0A\00", align 1
@.str.1 = private unnamed_addr constant [50 x i8] c"[video_exynos]: failed to map temp buffer object\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.exynos_bo* (%struct.exynos_device*, i32)* @exynos_create_mapped_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.exynos_bo* @exynos_create_mapped_buffer(%struct.exynos_device* %0, i32 %1) #0 {
  %3 = alloca %struct.exynos_bo*, align 8
  %4 = alloca %struct.exynos_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.exynos_bo*, align 8
  store %struct.exynos_device* %0, %struct.exynos_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %8 = load %struct.exynos_device*, %struct.exynos_device** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call %struct.exynos_bo* @exynos_bo_create(%struct.exynos_device* %8, i32 %9, i32 0)
  store %struct.exynos_bo* %10, %struct.exynos_bo** %7, align 8
  %11 = load %struct.exynos_bo*, %struct.exynos_bo** %7, align 8
  %12 = icmp ne %struct.exynos_bo* %11, null
  br i1 %12, label %15, label %13

13:                                               ; preds = %2
  %14 = call i32 @RARCH_ERR(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0))
  store %struct.exynos_bo* null, %struct.exynos_bo** %3, align 8
  br label %30

15:                                               ; preds = %2
  %16 = load %struct.exynos_bo*, %struct.exynos_bo** %7, align 8
  %17 = call i32 @exynos_bo_map(%struct.exynos_bo* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %23, label %19

19:                                               ; preds = %15
  %20 = call i32 @RARCH_ERR(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.1, i64 0, i64 0))
  %21 = load %struct.exynos_bo*, %struct.exynos_bo** %7, align 8
  %22 = call i32 @exynos_bo_destroy(%struct.exynos_bo* %21)
  store %struct.exynos_bo* null, %struct.exynos_bo** %3, align 8
  br label %30

23:                                               ; preds = %15
  %24 = load %struct.exynos_bo*, %struct.exynos_bo** %7, align 8
  %25 = getelementptr inbounds %struct.exynos_bo, %struct.exynos_bo* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @memset(i32 %26, i32 0, i32 %27)
  %29 = load %struct.exynos_bo*, %struct.exynos_bo** %7, align 8
  store %struct.exynos_bo* %29, %struct.exynos_bo** %3, align 8
  br label %30

30:                                               ; preds = %23, %19, %13
  %31 = load %struct.exynos_bo*, %struct.exynos_bo** %3, align 8
  ret %struct.exynos_bo* %31
}

declare dso_local %struct.exynos_bo* @exynos_bo_create(%struct.exynos_device*, i32, i32) #1

declare dso_local i32 @RARCH_ERR(i8*) #1

declare dso_local i32 @exynos_bo_map(%struct.exynos_bo*) #1

declare dso_local i32 @exynos_bo_destroy(%struct.exynos_bo*) #1

declare dso_local i32 @memset(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
